@@ -1,11 +1,0 @@
-language: perl6
-sudo: false
-perl6:
-  - latest
-  - '2020.12'
-install:
-  - rakudobrew build zef
-  - zef --depsonly install .
-script:
-  - prove -ve "raku -I."
-  - zef install .
