@@ -1,6 +1,6 @@
 use v6;
 use Test;
-plan 13;
+plan 14;
 use CSS;
 use CSS::TagSet::XHTML;
 use CSS::Units :px;
@@ -18,6 +18,7 @@ my $string = q:to<\_(ツ)_/>;
       @media print { h2 {color: green;} }
       p    {color: red;}
       div {font-size: 10pt }
+      @font-face { font-family:'Para'; src:url('/myfonts/para.otf') format('opentype'); }
       empty {} /* should be optimized away */
     </style>
   </head>
@@ -49,6 +50,7 @@ is $css.style('/html/body/h2[1]'), 'display:block; font-size:9pt; font-weight:bo
 is $css.style('/html/body/h2[2]'), 'direction:rtl; display:table; font-size:1.5em; font-weight:bolder; margin-bottom:0.75em; margin-top:0.75em; unicode-bidi:embed;';
 is $css.style('/html/body/hr'), '-xhtml-align:center; border:1px inset; display:block; font-size:12pt; unicode-bidi:embed;';
 is $css.style('/html/body/p'), 'color:red; display:none; font-size:12pt; margin-bottom:1.12em; margin-top:1.12em; unicode-bidi:embed;';
+is $css.font-face('Para').Str, "font-family:'Para'; src:url('/myfonts/para.otf') format('opentype');";
 
 is $css.page, 'margin:4pt;', '@page';
 
@@ -58,7 +60,8 @@ is-deeply $css.Str(:!optimize).lines, (
     '@media screen { h1:first-child { color:blue; } }',
     'p { color:red; }',
     'div { font-size:10pt; }',
-    'empty {  }'
+    'empty {  }',
+     "\@font-face \{ font-family:'Para'; src:url('/myfonts/para.otf') format('opentype'); }",
 ), 'unoptimized lines';
 
 is-deeply $css.Str.lines, (
@@ -66,7 +69,8 @@ is-deeply $css.Str.lines, (
     'body { background:powderblue; font-size:12pt; }',
     '@media screen { h1:first-child { color:blue; } }',
     'p { color:red; }',
-    'div { font-size:10pt; }'
+    'div { font-size:10pt; }',
+     "\@font-face \{ font-family:'Para'; src:url('/myfonts/para.otf') format('opentype'); }",
 ), 'optimized lines';
 
 is-deeply $css.Str(:!terse).lines, (
@@ -91,7 +95,12 @@ is-deeply $css.Str(:!terse).lines, (
     '',
     'div {',
     '  font-size: 10pt;',
-    '}'
+    '}',
+    '',
+    '@font-face {',
+    "  font-family: 'Para';",
+    "  src: url('/myfonts/para.otf') format('opentype');",
+    '}',
 ), 'pretty lines';
 
 done-testing();
